--- a/src/components/alg/alg-base/alg-theory/pages/elem-sort.html
+++ b/src/components/alg/alg-base/alg-theory/pages/elem-sort.html
@@ -24,43 +24,46 @@
 <article class="article">
   <div class="anchor" id="sort-bubble"></div>
   <h3>1. Сортировка пузырьком (Bubble Sort)</h3>
-  <p>Сортировка пузырьком — один из самых известных алгоритмов сортировки. Здесь нужно последовательно сравнивать значения соседних элементов и менять числа местами, если предыдущее оказывается больше последующего. Таким образом элементы с большими значениями оказываются в конце списка, а с меньшими остаются в начале.</p>
-  <p>Когда дойдем до конца массива, то самый последний элемент будет гарантированно на своем месте. Самый большой пузырек всплыл на поверхность воды. Мы повторим процедуру еще раз, но уже до предпоследнего элемента. После второй итерации, на своих позициях будет уже 2 последних элемента. Будем повторять алгоритм до тех пор, пока у нас не останется только первый элемент.</p>
-  <p>В первом цикле - число проходов по массиву, должно быть на 1 меньше чем длина массива.</p>
-<pre>function bubbleSort(arr) {
-  for (let i = 0; i &lt; arr.length - 1; i++) {
-    for (let j = 0; j &lt; arr.length - i; j++) {
-      if (arr[j] &gt; arr[j + 1]) {
-        let tmp = arr[j];
-        arr[j] = arr[j + 1];
-        arr[j + 1] = tmp;
+  <p><strong>Сортировка пузырьком (Bubble Sort)</strong> — это простой алгоритм сортировки, который последовательно сравнивает соседние элементы массива и меняет их местами, если они находятся в неправильном порядке. Этот процесс повторяется до тех пор, пока массив не будет полностью отсортирован.</p>
+  <p>Вот пример реализации сортировки пузырьком на языке JavaScript:</p>
+<pre>
+function bubbleSort(arr) {
+  let n = arr.length;
+  let swapped;
+  do {
+    swapped = false;
+    for (let i = 0; i &lt; n - 1; i++) {
+      if (arr[i] > arr[i + 1]) {
+        // Меняем элементы местами
+        let temp = arr[i];
+        arr[i] = arr[i + 1];
+        arr[i + 1] = temp;
+        swapped = true;
       }
     }
-  }
+    // Уменьшаем n, так как самый большой элемент уже на своем месте
+    n--;
+  } while (swapped);
   return arr;
-}</pre>
-  <p>Этот алгоритм считается учебным и почти не применяется на практике из-за низкой эффективности: он медленно работает на тестах, в которых маленькие элементы (их называют «черепахами») стоят в конце массива. Однако на нём основаны многие другие методы, например, шейкерная сортировка и сортировка расчёской.</p>
+}
 
-  <h3>Улучшенная сортировка пузырьком</h3>
-  <p>Алгоритм пузырьковой сортировки никак не следит за текущим состоянием массива. Даже если на вход мы отправим уже отсортированный массив, нам нужно будет столько же итераций цикла, как и для неотсортированного массива, чтобы получить результат. Быстродействие пузырьковой сортировки в JavaScript можно улучшить, если добавить флаг (логическую переменную) который будет следить за тем был ли хотя бы один обмен на текущей итерации. Если нет, то массив отсортирован и задача выполнена.</p>
-<pre>function bubbleSort(arr) {
-  let isSwap = false;
-  for (let i = 0; i &lt; arr.length - 1; i++) {
-    for (let j = 0; j &lt; arr.length - i; j++) {
-      if (arr[j] &gt; arr[j + 1]) {
-        let temp = arr[j + 1];
-        arr[j + 1] = arr[j];
-        arr[j] = temp;
-        isSwap = true;
-      }
-    }
-    if (!isSwap) {
-      return arr;
-    }
-  }
-  return arr;
-}</pre>
-  <p>Если отсортировать массив в котором все элементы уже расположены по возрастанию, то нам нужна будет только одна итерация внешнего цикла. Поэтому в лучшем случае мы получим сложность O(n).</p>
+// Пример использования:
+let array = [64, 34, 25, 12, 22, 11, 90];
+console.log("Неотсортированный массив:", array);
+let sortedArray = bubbleSort(array);
+console.log("Отсортированный массив:", sortedArray);
+</pre>
+  <p>Как это работает:</p>
+  <ol>
+    <li>Алгоритм проходит по массиву и сравнивает каждую пару соседних элементов.</li>
+    <li>Если элементы находятся в неправильном порядке (например, arr[i] > arr[i + 1]), они меняются местами.</li>
+    <li>Этот процесс повторяется до тех пор, пока не будет выполнено ни одного обмена за полный проход по массиву, что означает, что массив отсортирован.</li>
+    <li>После каждого прохода самый большой элемент "всплывает" в конец массива, поэтому количество сравниваемых элементов можно уменьшить на 1 после каждого прохода.</li>
+  </ol>
+  <p>Временная сложность:</p>
+  <p>В худшем и среднем случае: O(n²), где n — количество элементов в массиве.</p>
+  <p>В лучшем случае (если массив уже отсортирован): O(n).</p>
+  <p>Сортировка пузырьком не является самым эффективным алгоритмом для больших массивов, но она проста в реализации и понимании.</p>
 </article>
 
 
@@ -157,22 +160,22 @@ function cocktailSort(arr) {
   <div class="anchor" id="sort-insertion"></div>
   <h3>4. Сортировка вставками (Insertion Sort)</h3>
   <p>При сортировке вставками массив постепенно перебирается слева направо. При этом каждый последующий элемент размещается так, чтобы он оказался между ближайшими элементами с минимальным и максимальным значением.</p>
-<pre>function insertionSort(inputArr) { 
-  let n = inputArr.length; 
+<pre>function insertionSort(inputArr) {
+  let n = inputArr.length;
   for (let i = 1; i &lt; n; i++) {
 
   // выбираем первый элемент в неотсортированном массиве
   let current = inputArr[i];
 
   // последний элемент отсортированного массива
-  let j = i-1; 
-  while ((j &gt; -1) && (current &lt; inputArr[j])) { 
-  inputArr[j+1] = inputArr[j]; 
-  j--; 
-  } 
-  inputArr[j+1] = current; 
-  } 
-  return inputArr; 
+  let j = i-1;
+  while ((j &gt; -1) && (current &lt; inputArr[j])) {
+  inputArr[j+1] = inputArr[j];
+  j--;
+  }
+  inputArr[j+1] = current;
+  }
+  return inputArr;
 }</pre>
   <p>Итерация начинается со второго элемента. Считаем отсортированным по умолчанию первый элемент. Для каждой итерации мы отслеживаем current элемент. Каждый current элемент будет первым элементом несортированного массива - и каждый элемент перед ним будет принадлежать отсортированному массиву.</p>
   <p>Через в while цикла, мы проходим отсортированный массив и сдвиг элементы вправо, открывая пространство для current элемента должны быть вставлено.</p>
@@ -186,21 +189,21 @@ function cocktailSort(arr) {
   <h3>5. Сортировка выбором (Selection sort)</h3>
   <p>Сортировка выбором начинается с поиска наименьшего элемента в списке и обмена его с первым элементом (таким образом, наименьший элемент помещается в окончательную позицию в отсортированном массиве). Затем мы сканируем массив, начиная со второго элемента, в поисках наименьшего среди оставшихся n-1 элементов и обмениваем найденный наименьший элемент со вторым, т.е. помещаем второй наименьший элемент в окончательную позицию в отсортированном массиве. В общем случае, при i-ом проходе по списку (0 &lt;= i &lt;= n-2) алгоритм ищет наименьший элемент среди последних n-i элементов и обменивает его с A[ i ]. После выполнения n-1 проходов список оказывается отсортирован.</p>
   <p>После каждой итерации необходимо проверять на один элемент меньше, пока не будет отсортирован весь массив или список.</p>
-<pre>function selectionSort(arr) { 
+<pre>function selectionSort(arr) {
   for(let i = 0; i &lt; arr.length - 1; i++) {
     // Пусть в начальном индексе наименьшее число
     let min = i;
     // Сравним его со всеми числами справа и найдем наименьшее
     for(let j = i + 1; j &lt; arr.length; j++) {
       if(arr[j] &lt; arr[min]) {
-        min = j; 
+        min = j;
       }
     }
     if (min !== i) {
       // Заменяем элементы
-      let tmp = arr[i]; 
+      let tmp = arr[i];
       arr[i] = arr[min];
-      arr[min] = tmp;      
+      arr[min] = tmp;
     }
   }
   return arr;
@@ -236,7 +239,7 @@ function cocktailSort(arr) {
   <h3>7. Сортировка подсчетом (Counting Sort)</h3>
 
   <p>Вначале для каждого элемента массива подсчитывается количество элементов, меньших, чем он, и на основе этой информации текущий элемент помещается в соответствующее место отсортированного массива. </p>
-<pre>function SimpleCountingSort(A) {   
+<pre>function SimpleCountingSort(A) {
   var n = A.length, Count = [], B = [];
   for (var i = 0; i &lt; n; i++) Count[ i ] = 0;
   for (var i = 0; i &lt; n-1; i++)
@@ -256,9 +259,9 @@ function cocktailSort(arr) {
   <div class="anchor" id="sort-merge"></div>
   <h3>8. Сортировка слиянием (Merge Sort)</h3>
 
-  <p>Сложность линейно-логарифмическая O(N*logN). logN разбиений на половины. Итерация по массиву при каждом разбиении.</p> 
+  <p>Сложность линейно-логарифмическая O(N*logN). logN разбиений на половины. Итерация по массиву при каждом разбиении.</p>
   <p>Для реализации сортировки понадобится вспомогательный массив - это еще O(N) по памяти.</p>
-  <p>Сортировка слиянием использует принцип - разделяй и властвуй. Тот же самый принцип реализует бинарный поиск. Мы делим массив на две группы, потом каждую группу на две группы и так далее. Пока у нас не останутся пары. Берем первую пару и сравниваем элементы между собой и меняем их порядок. То же самое со второй парой. Потом эти две пары объединяем в четверку элементов, сравниваем и меняем порядок. И так далее.</p> 
+  <p>Сортировка слиянием использует принцип - разделяй и властвуй. Тот же самый принцип реализует бинарный поиск. Мы делим массив на две группы, потом каждую группу на две группы и так далее. Пока у нас не останутся пары. Берем первую пару и сравниваем элементы между собой и меняем их порядок. То же самое со второй парой. Потом эти две пары объединяем в четверку элементов, сравниваем и меняем порядок. И так далее.</p>
 <pre>function Merge(a,low,mid,high) {    //Вспомогательная функция.
   var b = new Array(high+1-low), h, i, j = mid+1, k, h = low, i = 0;
   while (h &lt;= mid && j &lt;= high ) {
@@ -277,10 +280,10 @@ function cocktailSort(arr) {
     for (k = h; k &lt;= mid; k++) {
       b[ i ]=a[k]; i++;
     }
-  }    
+  }
   for (k=0; k&lt;=high-low; k++) {
     a[k+low]=b[k];
-  } 
+  }
   return a;
 }
 
@@ -313,7 +316,7 @@ function MergeSort(A) {     //Функция сортировки слияния
     else { n--;
             if (n == 0) return A;
             t = A[n];  A[n] = A[0];
-          }        
+          }
     j = i;  k = j*2+1;
     while (k &lt; n)
       { if (k+1 &lt; n && A[k+1] &gt; A[k]) k++;
@@ -321,7 +324,7 @@ function MergeSort(A) {     //Функция сортировки слияния
         { A[j] = A[k];  j = k;  k = j*2+1; }
         else break;
       }
-    A[j] = t; 
+    A[j] = t;
   }
 }</pre>
 </article>
