--- a/src/components/alg/alg-conspect/sp/pages/elem-sp10.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp10.html
@@ -36,6 +36,130 @@
   <div class="anchor" id="p1"></div>
   <h3>Бинарный поиск на массиве</h3>
 
+  <h4>Линейный поиск на массиве</h4>
+  <p>Дан массив целых чисел A длины n a<sub>1</sub>, a<sub>2</sub>, ... , a<sub>n</sub>. Задано q запросов, каждый запрос это проверка существует ли число b<sub>j</sub> в массиве A.</p>
+  <p>Наивное решение задачи, каждый запрос обрабатывать линейным поиском. Трудоемкость такого решение O(n * q)</p>
+
+  <details>
+    <summary>Решение за O(n * q)</summary>
+<pre>
+int q, b;
+cin >> q;
+bool flag;
+for (int j = 0; j &lt; q; j++) {
+  flag = false;
+  cin >> b;
+  for (int i = 0; i &lt; A.size(); i++) {
+    if (A[i] == b) {
+      flag = true;
+    }
+  }
+  if (flag) {
+    cout &lt;&lt; "YES\n";
+  } else {
+    cout &lt;&lt; "NO\n";
+  }
+}
+</pre>
+  </details>
+
+  <h4>Бинарный поиск на массиве</h4>
+  <p>Оптимизируем решение. Попробуем искать значение в массиве быстрее чем за O(n). Для улучшения мы требуем, чтобы массив был упорядочен (по возрастанию). Для алгоритма нам потребуется три указателя left, right, mid.</p>
+  <p>left и right это границы поиска, mid это середина области поиска</p>
+  <p>Разделим нашу область поиска на две равные части, для этого mid определим по формуле</p>
+  <code>mid = (left + right) / 2</code>
+  <p>Элемент, который мы ищем лежит в одной из частей. Элемент массива с индексом mid может принадлежать любой из частей.</p>
+  <p>В силу того, что массив упорядочен (например, по возрастанию) мы можем сравнивать элемент под индексом mid со значением поиска и отвергнуть половину области поиска в которой ответа точно нет.</p>
+  <p>Допустим A[mid] &lt; b, тогда в силу того что массив упорядочен по возрастанию все элементы</p>
+  <code>A[left], A[left+1], ... , A[mid] &lt; b</code>
+  <p>и в области [left, mid] ответа нет. Мы можем переместить границу left в mid</p>
+  <p>Аналогичные рассуждения справедливы для границы right, если A[mid] > b.</p>
+
+  <p>Последовательность действий алгоритма</p>
+  <ol>
+    <li>Находим середину области поиска</li>
+    <li>Делаем сравнение элемента с индексом mid со значением поиска b</li>
+    <li>В зависимости от результата сдвигаем, либо левую границу области поиска в середину, либо правую границу области поиска в середину</li>
+    <li>Продолжаем выполнять движение границ области поиска до тех пор, пока границы не станут соседними значениями right - left > 1.</li>
+    <li>Делаем дополнительную проверку элементов после окончания цикла while</li>
+  </ol>
+  <p>На каждой итерации область поиска уменьшается вдвое. Для поиска элемента при помощи бинарного поиска потребуется примерно log<sub>2</sub>(n) операций. Трудоемкость O(log<sub>2</sub>(n)).</p>
+<pre>
+while (right - left > 1) {
+  mid = (right + left) / 2;
+  if (A[mid] &lt; b) {
+    left = mid;
+  } else {
+    right = mid;
+  }
+}
+</pre>
+
+  <p>Трудоемкость алгоритма O(n*log<sub>2</sub>(n) + q*log<sub>2</sub>(n))</p>
+
+  <details>
+    <summary>Код</summary>
+<pre>
+sort(A.begin(), A.end());
+int q, b, left, right, mid;
+cin >> q;
+for (int j = 0; j &lt; q; j++) {
+  cin >> b;
+  left = 0;
+  right = n - 1;
+
+  while (right - left > 1) {
+    mid = (right + left) / 2;
+    if (A[mid] &lt; b) {
+      left = mid;
+    } else {
+      right = mid;
+    }
+  }
+
+  if (A[left] == b || A[right] == b) {
+    cout &lt;&lt; "YES\n";
+  } else {
+    cout &lt;&lt; "NO\n";
+  }
+}
+</pre>
+  </details>
+
+  <p>Бинарный поиск на массиве можно реализовывать по-разному. Чуть ранее мы реализовывали версию бинарного поиска, в которой ответ искали в области включительно с границами [left, right]. Мы можем изменить область поиска элемента до полуинтервалов [left, right) это позволит меньше делать действий в дополнительной проверке элементов после цикла while, но усложняет выбор сдвига границ</p>
+
+  <details>
+    <summary>Код</summary>
+<pre>
+sort(A.begin(), A.end());
+int q, b, left, right, mid;
+cin >> q;
+for (int j = 0; j &lt; q; j++) {
+  cin >> b;
+  left = 0;
+  right = n;  // здесь отличие
+
+  while (right - left > 1) {
+    mid = (right + left) / 2;
+    if (A[mid] >= b) { // здесь отличие
+      right = mid; // здесь отличие
+    } else {
+      left = mid; // здесь отличие
+    }
+  }
+
+  if (A[left] == b) { // здесь отличие
+    cout &lt;&lt; "YES\n";
+  } else {
+    cout &lt;&lt; "NO\n";
+  }
+}
+</pre>
+  </details>
+
+  <p>Рассмотрим небольшое усложнение задаи про поиск элементов в массиве.</p>
+  <p>Пусть нас интересует не только существование элемента в массиве, но и определить какое их количество</p>
+  <p>При помощи бинарного поиска мы можем определить первую и последнюю позицию в отсортированном массиве, где встречается элемент</p>
 </article>
 
 
