--- a/src/components/code/code-c/pages/elem-book1.html
+++ b/src/components/code/code-c/pages/elem-book1.html
@@ -1,7 +1,5 @@
 <article class="article">
-  <h1>Майк МакГрат
-  <br>Программирование на Си для начинающих</h1>
-  <p>2016. 192с</p>
+  <h1>2016 Майк МакГрат - Программирование на Си для начинающих. 192c</h1>
   <p>Конспект книги</p>
 </article>
 
@@ -10,38 +8,113 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">1 Приступаем к работе (9стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p1.1">1.1 Введение в язык Си (10стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p1.2">1.2 Установка компилятора языка Си (12стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p1.3">1.3 Написание программы на языке Си (14стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p1.4">1.4 Компилирование программы на языке Си (16стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p1.5">1.5 Понимание процесса компилирования (18стр)</a></p>
-  <p><a href="#p2">2 Сохранение значений переменных (21стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.1">2.1 Создание переменных в программе (22стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.2">2.2 Отображение значений переменных (24стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.3">2.3 Ввод значений переменных (26стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.4">2.4 Спецификаторы типов данных (28стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.5">2.5 Использование глобальных переменных (30стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.6">2.6 Размещение переменных в регистрах (32стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.7">2.7 Преобразование типов данных (34стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.8">2.8 Создание массивов переменных (36стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p2.9">2.9 Описание нескольких измерений (38стр)</a></p>
-  <p><a href="#p3">3 Установка значений переменных (41стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p3.1">3.1 Объявление констант в программе (42стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p3.2">3.2 Перечисление значений констант (44стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p3.3">3.3 Создание константного типа (46стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p3.4">3.4 Определение констант (48стр)</a></p>
-  <p>&nbsp;&nbsp;<a href="#p3.5">3.5 Отладка с помощью определений</a></p>
-  <p><a href="#p4">4 Выполнение операций</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.1">4.1 Выполнение арифметических операций</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.2">4.2 Присваивание значений</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.3">4.3 Сравнение значений</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.4">4.4 Логические значения</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.5">4.5 Проверка условий</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.6">4.6 Изменение размера</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.7">4.7 Сравнение битовых значений</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.8">4.8 Флаги</a></p>
-  <p>&nbsp;&nbsp;<a href="#p4.9">4.9 Знакомство с приоритетами</a></p>
+  <p>
+    <a href="#p1">1 Приступаем к работе (9)</a>
+    <br>&nbsp;&nbsp;<a href="#p1.1">1.1 Введение в язык Си (10)</a>
+    <br>&nbsp;&nbsp;<a href="#p1.2">1.2 Установка компилятора языка Си (12)</a>
+    <br>&nbsp;&nbsp;<a href="#p1.3">1.3 Написание программы на языке Си (14)</a>
+    <br>&nbsp;&nbsp;<a href="#p1.4">1.4 Компилирование программы на языке Си (16)</a>
+    <br>&nbsp;&nbsp;<a href="#p1.5">1.5 Понимание процесса компилирования (18)</a>
+  </p>
+
+  <p>
+    <a href="#p2">2 Сохранение значений переменных (21)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.1">2.1 Создание переменных в программе (22)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.2">2.2 Отображение значений переменных (24)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.3">2.3 Ввод значений переменных (26)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.4">2.4 Спецификаторы типов данных (28)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.5">2.5 Использование глобальных переменных (30)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.6">2.6 Размещение переменных в регистрах (32)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.7">2.7 Преобразование типов данных (34)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.8">2.8 Создание массивов переменных (36)</a>
+    <br>&nbsp;&nbsp;<a href="#p2.9">2.9 Описание нескольких измерений (38)</a>
+  </p>
+
+  <p>
+    <a href="#p3">3 Установка значений переменных (41)</a>
+    <br>&nbsp;&nbsp;<a href="#p3.1">3.1 Объявление констант в программе (42)</a>
+    <br>&nbsp;&nbsp;<a href="#p3.2">3.2 Перечисление значений констант (44)</a>
+    <br>&nbsp;&nbsp;<a href="#p3.3">3.3 Создание константного типа (46)</a>
+    <br>&nbsp;&nbsp;<a href="#p3.4">3.4 Определение констант (48)</a>
+    <br>&nbsp;&nbsp;<a href="#p3.5">3.5 Отладка с помощью определений (50)</a>
+  </p>
+
+  <p>
+    <a href="#p4">4 Выполнение операций (53)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.1">4.1 Выполнение арифметических операций (54)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.2">4.2 Присваивание значений (56)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.3">4.3 Сравнение значений (58)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.4">4.4 Логические значения (60)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.5">4.5 Проверка условий (62)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.6">4.6 Измерение размера (64)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.7">4.7 Сравнение битовых значений (66)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.8">4.8 Флаги (68)</a>
+    <br>&nbsp;&nbsp;<a href="#p4.9">4.9 Знакомство с приоритетами (70)</a>
+  </p>
+
+  <p>
+    <a href="#p5">5 Создание утверждений (73)</a>
+    <br>&nbsp;&nbsp;<a href="#p5.1">5.1 Проверка значений выражений (74)</a>
+    <br>&nbsp;&nbsp;<a href="#p5.2">5.2 Ветвление с помощью операции switch (76)</a>
+    <br>&nbsp;&nbsp;<a href="#p5.3">5.3 Зацикливание с помощью счетчика (78)</a>
+    <br>&nbsp;&nbsp;<a href="#p5.4">5.4 Зацикливание с помощью условия (80)</a>
+    <br>&nbsp;&nbsp;<a href="#p5.5">5.5 Досрочный выход из циклов (82)</a>
+    <br>&nbsp;&nbsp;<a href="#p5.6">5.6 Переход к меткам (84)</a>
+  </p>
+
+  <p>
+    <a href="#p6">6 Использование функций (87)</a>
+    <br>&nbsp;&nbsp;<a href="#p6.1">6.1 Объявление функций (88)</a>
+    <br>&nbsp;&nbsp;<a href="#p6.2">6.2 Передача аргументов (90)</a>
+    <br>&nbsp;&nbsp;<a href="#p6.3">6.3 Рекурсивные вызовы (92)</a>
+    <br>&nbsp;&nbsp;<a href="#p6.4">6.4 Размещение функций в заголовках (94)</a>
+    <br>&nbsp;&nbsp;<a href="#p6.5">6.5 Ограничение доступности (96)</a>
+  </p>
+
+  <p>
+    <a href="#p7">7 Указатели (99)</a>
+    <br>&nbsp;&nbsp;<a href="#p7.1">7.1 Получение доступа к данным с помощью указателей (100)</a>
+    <br>&nbsp;&nbsp;<a href="#p7.2">7.2 Арифметика указателей (102)</a>
+    <br>&nbsp;&nbsp;<a href="#p7.3">7.3 Передача указателей в функции (104)</a>
+    <br>&nbsp;&nbsp;<a href="#p7.4">7.4 Создание массивов указателей (106)</a>
+    <br>&nbsp;&nbsp;<a href="#p7.5">7.5 Указатели на функции (108)</a>
+  </p>
+
+  <p>
+    <a href="#p8">8 Работа со строками (111)</a>
+    <br>&nbsp;&nbsp;<a href="#p8.1">8.1 Чтение строк (112)</a>
+    <br>&nbsp;&nbsp;<a href="#p8.2">8.2 Копирование строк (114)</a>
+    <br>&nbsp;&nbsp;<a href="#p8.3">8.3 Объединение строк (116)</a>
+    <br>&nbsp;&nbsp;<a href="#p8.4">8.4 Поиск подстрок (118)</a>
+    <br>&nbsp;&nbsp;<a href="#p8.5">8.5 Валидация строк (120)</a>
+    <br>&nbsp;&nbsp;<a href="#p8.6">8.6 Преобразование строк (122)</a>
+  </p>
+
+  <p>
+    <a href="#p9">9 Создание структур (125)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.1">9.1 Группирование данных в структуру (126)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.2">9.2 Определение типа данных с помощью структуры (128)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.3">9.3 Использование указателей в структурах (130)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.4">9.4 Указатели на структуры (132)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.5">9.5 Передача структур в функции (134)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.6">9.6 Группирование данных в объединение (136)</a>
+    <br>&nbsp;&nbsp;<a href="#p9.7">9.7 Выделение памяти (138)</a>
+  </p>
+
+  <p>
+    <a href="#p10">10 Получение результата (141)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.1">10.1 Создание файла (142)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.2">10.2 Чтение и запись символов (144)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.3">10.3 Чтение и запись строк (146)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.4">10.4 Считывание и запись файлов целиком (148)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.5">10.5 Сканирование файловых потоков (150)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.6">10.6 Сообщение об ошибках (152)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.7">10.7 Получение даты и времени (154)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.8">10.8 Запуск таймера (156)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.9">10.9 Генерация случайных чисел (158)</a>
+    <br>&nbsp;&nbsp;<a href="#p10.10">10.10 Отображение диалогового окна (160)</a>
+  </p>
+
 </article>
 
 
@@ -672,6 +745,43 @@ int main()
 <article class="article">
   <div class="anchor" id="p3.5"></div>
   <h3>3.5 Отладка с помощью определений (50стр)</h3>
+
+  <p>Директивы определяющие константу</p>
+  <p>#define определяет константу</p>
+  <p>#undef разопределяет константу</p>
+
+  <p>Директивы позволяющие условное ветвление</p>
+  <p>#if</p>
+  <p>#else</p>
+  <p>#elif (else if)</p>
+  <p>#ifdef проверяет что константа уже определена</p>
+  <p>#ifndef проверяет что константа еще не определена</p>
+  <p>#endif заканчивает блок ветвления</p>
+
+  <details>
+    <summary>Программа 15 (50стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+#define DEBUG 1
+
+int main() {
+  #if DEBUG == 1
+    printf("Debug status is 1\n");
+  #elif DEBUG == 2
+    printf("Debug status is 2\n");
+  #else
+    #ifdef DEBUG
+      printf("Debug is defined\n");
+    #endif
+    #ifndef DEBUG
+      printf("Debug is not defined\n");
+    #endif
+  #endif
+
+  return 0;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -682,12 +792,326 @@ int main()
 </article>
 
 
-<p>&nbsp;&nbsp;<a href="#p4.1">4.1 Выполнение арифметических операций</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.2">4.2 Присваивание значений</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.3">4.3 Сравнение значений</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.4">4.4 Логические значения</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.5">4.5 Проверка условий</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.6">4.6 Изменение размера</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.7">4.7 Сравнение битовых значений</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.8">4.8 Флаги</a></p>
-<p>&nbsp;&nbsp;<a href="#p4.9">4.9 Знакомство с приоритетами</a></p>
+<!-- 4.1 Выполнение арифметических операций -->
+<article class="article">
+  <div class="anchor" id="p4.1"></div>
+  <h3>4.1 Выполнение арифметических операций (54стр)</h3>
+
+  <p>Сложение +, вычитание -, умножение *, деление нацело /, остаток от деления %, инкремент ++, декремент --</p>
+
+  <details>
+    <summary>Программа 16 (55стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int a = 4, b = 8, c = 1, d = 1;
+  printf("%d\n", a + b);
+  printf("%d\n", a - b);
+  printf("%d\n", a * b);
+  printf("%d\n", a / b);
+
+  printf("%d\n", a++);
+  printf("%d\n", ++b);
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.2 Присваивание значений -->
+<article class="article">
+  <div class="anchor" id="p4.2"></div>
+  <h3>4.2 Присваивание значений (56стр)</h3>
+
+  <code>a = b, a += b, a -= b, a *= b, a /= b, a %= b</code>
+
+  <details>
+    <summary>Программа 17 (57стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int a, b;
+  printf("a = %d\n", a = 8);
+  printf("b = %d\n", b = 4);
+  printf("a += b, a = %d\n", a += b);
+  printf("a -= b, a = %d\n", a -= b);
+  printf("a *= b, a = %d\n", a *= b);
+  printf("a /= b, a = %d\n", a /= b);
+  printf("a %%= b, a = %d\n", a %= b);
+
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.3 Сравнение значений -->
+<article class="article">
+  <div class="anchor" id="p4.3"></div>
+  <h3>4.3 Сравнение значений (58стр)</h3>
+
+  <p>==, !=, >, &lt;, >=, &lt;=</p>
+
+  <details>
+    <summary>Программа 18 (59стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int zero = 0, nil = 0, one = 1;
+  char upr = 'A', lwr = 'a';
+
+  printf("0 == 0 : %d\n", zero == nil);
+  printf("0 == 1 : %d\n", zero == one);
+  printf("A == a : %d\n", upr == lwr);
+  printf("A != a : %d\n", upr != lwr);
+  printf("1 > 0 : %d\n", one > nil);
+  printf("1 &lt; 0 : %d\n", one &lt; nil);
+  printf("0 >= 0 : %d\n", zero >= nil);
+  printf("1 &lt;= 0 : %d\n", one &lt;= nil);
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.4 Логические значения -->
+<article class="article">
+  <div class="anchor" id="p4.4"></div>
+  <h3>4.4 Логические значения (60стр)</h3>
+
+  <p>И &&, ИЛИ ||, НЕ !</p>
+
+  <details>
+    <summary>Программа 19 (61стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int yes = 1, no = 0;
+
+  printf("no && no : %d\n", no && no);
+  printf("yes && no : %d\n", yes && no);
+  printf("yes && yes : %d\n", yes && yes);
+  printf("no || no : %d\n", no || no);
+  printf("yes || no : %d\n", yes || no);
+  printf("yes || yes : %d\n", yes || yes);
+  printf("!yes : %d\n", !yes);
+  printf("!no : %d\n", !no);
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.5 Проверка условий -->
+<article class="article">
+  <div class="anchor" id="p4.5"></div>
+  <h3>4.5 Проверка условий (62стр)</h3>
+
+  <p>Тернарный оператор &:</p>
+  <code>num = (a > b) ? a: b;</code>
+
+  <details>
+    <summary>Программа 20 (63стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int num = 6;
+
+  (num % 2 != 0) ?
+  printf("%d is odd\n", num) : printf("%d is even\n", num);
+  printf("There %s ", (num == 1) ? "is" : "are");
+  printf("%d %s\n", num, (num == 1) ? "apple" : "apples");
+
+  num = 1;
+
+  (num % 2 != 0) ?
+  printf("%d is odd\n", num) : printf("%d is even\n", num);
+  printf("There %s ", (num == 1) ? "is" : "are");
+  printf("%d %s\n", num, (num == 1) ? "apple" : "apples");
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.6 Измерение размера -->
+<article class="article">
+  <div class="anchor" id="p4.6"></div>
+  <h3>4.6 Измерение размера (64стр)</h3>
+
+  <p>sizeof возвращает целое число - количество байт памяти выделенной под измеряемый объект. Измерить можно переменную, тип данных, массив</p>
+  <code>sizeof(char); // 1</code>
+  <p>sizeof массива складывается из размера типа данных умноженного на число элементов в массиве.</p>
+  <code>sizeof(int[3]); // 12</code>
+
+  <details>
+    <summary>Программа 21 (65стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int num = 1234567890;
+
+  printf("Size of int %d bytes\n", sizeof(int));
+  printf("Size of num %d bytes\n", sizeof(num));
+  printf("Size of num %d bytes\n", sizeof num);
+  printf("Size of array %d bytes\n", sizeof(int[3]));
+
+  struct {int score; char grade;} result;
+  printf("Size of struct %d bytes\n", sizeof result);
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.7 Сравнение битовых значений -->
+<article class="article">
+  <div class="anchor" id="p4.7"></div>
+  <h3>4.7 Сравнение битовых значений (66стр)</h3>
+
+  <p>Хотя тип данных char занимает 1 байт, можно совершать операции с каждый его битом отдельно с помощью битовых операций.</p>
+  <p>| ИЛИ, & И, ~ НЕ, ^ исключающее ИЛИ, &lt;&lt; битовый сдвиг влево, &gt;&gt; битовый сдвиг вправо</p>
+  <p>Битовые операции часто используются при программировании устройств с ограниченными ресурсами</p>
+
+  <details>
+    <summary>Программа 22 (67стр)</summary>
+    <p>Поменяем значения двух переменных не используя третью переменную</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  int x = 10, y = 5;
+  printf("x = %d y = %d\n", x, y);
+
+  x = x ^ y;
+  y = x ^ y;
+  x = x ^ y;
+  printf("x = %d y = %d\n", x, y);
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.8 Флаги -->
+<article class="article">
+  <div class="anchor" id="p4.8"></div>
+  <h3>4.8 Флаги (68стр)</h3>
+
+  <p>Переменная типа char занимает 1 байт и может содержать 8 флагов. Чтобы включить четвертый флаг, нужно записать в нее десятичное число 8 (1000<sub>2</sub>)</p>
+  <p>Значения битовых флагов можно изменять с помощью битовой операции ~ НЕ, однако следует использовать маску для нулей идущих перед битовыми флагами. Чтобы изменить четыре первых флага числа, надо использовать битовую маску 15 (00001111<sub>2</sub>) с помощью битового оператора & И.</p>
+  <p>Переменная типа int занимает 4 байта и может содержать 32 флага.</p>
+
+  <details>
+    <summary>Программа 23 (69стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  char flags = 8; // 1000
+  flags = flags | 2; // 1010
+  printf("flag 1 %s\n", (flags & 1) > 0 ? "ON" : "OFF");
+  printf("flag 2 %s\n", (flags & 2) > 0 ? "ON" : "OFF");
+  printf("flag 3 %s\n", (flags & 4) > 0 ? "ON" : "OFF");
+  printf("flag 4 %s\n", (flags & 8) > 0 ? "ON" : "OFF");
+
+  char mask = 15; // 1111
+  flags = ~flags & mask;
+  printf("flag 1 %s\n", (flags & 1) > 0 ? "ON" : "OFF");
+  printf("flag 2 %s\n", (flags & 2) > 0 ? "ON" : "OFF");
+  printf("flag 3 %s\n", (flags & 4) > 0 ? "ON" : "OFF");
+  printf("flag 4 %s\n", (flags & 8) > 0 ? "ON" : "OFF");
+  printf("flags %d\n", flags);
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4.9 Знакомство с приоритетами -->
+<article class="article">
+  <div class="anchor" id="p4.9"></div>
+  <h3>4.9 Знакомство с приоритетами (70стр)</h3>
+
+  <p>Приоритет операций определяет порядок в котором выполняются операции в выражении.</p>
+
+  <details>
+    <summary>Программа 24 (71стр)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main()
+{
+  printf("((2*3)+4)-5 %d\n", 2*3+4-5);
+  printf("2*((3+4)-5) %d\n", 2*((3+4)-5));
+  printf("(7*3) %% 2 %d\n", 7*3%2);
+  printf("7*(3 %% 2) %d\n", 7*(3%2));
+
+  int num = 9;
+  printf("(8/2)*4 %d\n", --num/2*sizeof(int));
+  num = 9;
+  printf("8/(2*4) %d\n", --num/(2*sizeof(int)));
+
+  return 0;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 5 Создание утверждений -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>5 Создание утверждений (73стр)</h3>
+</article>
+
+
+<!-- 5.1 Проверка значений выражений -->
+<article class="article">
+  <div class="anchor" id="p5.1"></div>
+  <h3>5.1 Проверка значений выражений (74стр)</h3>
+</article>
+
+
+<br>&nbsp;&nbsp;<a href="#p5.2">5.2 Ветвление с помощью операции switch</a>
+<br>&nbsp;&nbsp;<a href="#p5.3">5.3 Зацикливание с помощью счетчика</a>
+<br>&nbsp;&nbsp;<a href="#p5.4">5.4 Зацикливание с помощью условия</a>
+<br>&nbsp;&nbsp;<a href="#p5.5">5.5 Досрочный выход из циклов</a>
+<br>&nbsp;&nbsp;<a href="#p5.6">5.6 Переход к меткам</a>
+
+<a href="#p6">6 Использование функций (87)</a>
+<br>&nbsp;&nbsp;<a href="#p6.1">6.1 Объявление функций (88)</a>
+<br>&nbsp;&nbsp;<a href="#p6.2">6.2 Передача аргументов (90)</a>
+<br>&nbsp;&nbsp;<a href="#p6.3">6.3 Рекурсивные вызовы (92)</a>
+<br>&nbsp;&nbsp;<a href="#p6.4">6.4 Размещение функций в заголовках (94)</a>
+<br>&nbsp;&nbsp;<a href="#p6.5">6.5 Ограничение доступности (96)</a>
