--- a/src/components/code/code-js/js-theory/pages/elem-js.html
+++ b/src/components/code/code-js/js-theory/pages/elem-js.html
@@ -259,59 +259,39 @@
   <p>Способы объявления переменных</p>
   <ol>
     <li>
+      <h4>var</h4>
+      <h4>Scope (область видимости)</h4>
+      <p>Функциональная область видимости если объявлена внутри функции. Глобальная область видимости если объявлена вне функции</p>
+      <h4>Hoisting</h4>
+      <p>Поднимается наверх своей области видимости с инициализацией значением undefined</p>
+      <h4>Re-declaration</h4>
+      <p>Может быть переобъявлена в той же области видимости</p>
+      <h4>Mutability</h4>
+      <p>Может изменять свое значение</p>
+    </li>
+    <li>
       <h4>let</h4>
       <p>Появился в es6.</p>
-      <ol>
-        <li>
-          <p>Можно сначала создать переменную, а потом присвоить ей значение</p>
-          <code>let abc // создать переменную с именем abc</code>
-          <code>abc = true // присвоить значение true переменной с именем abc</code>
-        </li>
-        <li>
-          <p>Можно выполнить объявление и присваивание в одой строке</p>
-          <code>let abc = true</code>
-        </li>
-        <li>
-          <p>При обращении к переменной, она возвращает свое значени</p>
-          <code>abc // true</code>
-        </li>
-        <li>
-          <p>Если объявить переменную и не присвоить ей значение и обратиться к ней, то она вернет значение undefined, которое туда записал сам js при объявлении переменной.</p>
-          <code>let key</code>
-          <code>key // undefined</code>
-        </li>
-        <li>
-          <p>При попытке обратиться к переменной до ее объявления js выдаст ошибку</p>
-          <code>max // ReferenceError: max is not defined</code>
-          <code>let max</code>
-        </li>
-      </ol>
+      <h4>Scope (область видимости)</h4>
+      <p>Блочная область видимости. Ограничена блоком, в котором она объявлена</p>
+      <h4>Hoisting</h4>
+      <p>Поднимается наверх своей области видимости, но не инициализирована (temporal dead zone)</p>
+      <h4>Re-declaration</h4>
+      <p>Не может быть переобъявлена в той же области видимости</p>
+      <h4>Mutability</h4>
+      <p>Может изменять свое значение</p>
     </li>
     <li>
       <h4>const</h4>
       <p>Появился в es6.</p>
-      <ol>
-        <li>
-          <p>При создании константы надо обязательно сразу присвоить ей значение</p>
-          <code>const num = 10 // создать константу num со значением 10</code>
-        </li>
-        <li>
-          <p>При попытке объявить константу без присвоения значения, js выдаст ошибку</p>
-          <code>const min // SyntaxError: Missing initializer in const declaration</code>
-        </li>
-        <li>
-          <p>При попытке перезаписать значение в константе, js выдаст ошибку</p>
-          <code>num = 20 // TypeError: Assignment to constant variable</code>
-        </li>
-        <li>
-          <p>При попытке обратиться к константе до ее объявления js выдаст ошибку</p>
-          <code>max // ReferenceError: max is not defined</code>
-          <code>const max = 200</code>
-        </li>
-      </ol>
-    </li>
-    <li>
-      <h4>var</h4>
+      <h4>Scope (область видимости)</h4>
+      <p>Блочная область видимости. Ограничена блоком, в котором она объявлена</p>
+      <h4>Hoisting</h4>
+      <p>Поднимается наверх своей области видимости, но не инициализирована (temporal dead zone)</p>
+      <h4>Re-declaration</h4>
+      <p>Не может быть переобъявлена в той же области видимости</p>
+      <h4>Mutability</h4>
+      <p>Не может изменять свое значение для примитивных типов. Однако для объектов и массивов, свойства или элементы могут быть изменены</p>
     </li>
   </ol>
 
