--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -83,6 +83,7 @@
   <h2>DSR</h2>
   <p><a href="dsr/dsr-csharptest.html" class="dsr-test">DSR NetSchool 2023/24 Exam</a> (55 из 100)</p>
   <p><a href="dsr/dsr-ctest.html" class="dsr-test">DSR C 2024 Test</a></p>
+  <p><a href="dsr/dsr-jstest.html" class="dsr-test">DSR JS Bootcamp 2025 Test</a></p>
 </article>
 
 
