--- a/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
@@ -236,6 +236,39 @@ NONE
 NONE
 STAIR
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int t;
+  cin >> t;
+
+  for (int test = 0; test &lt; t; test++) {
+  int a, b, c;
+  cin >> a >> b >> c;
+
+  // решение
+  string result = "NONE";
+  if (c > b && b > a) {
+    result = "STAIR";
+  }
+  if (b > a && b > c) {
+    result = "PEAK";
+  }
+
+  // вывод результата
+  cout &lt;&lt; result &lt;&lt; "\n";
+
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -249,12 +282,11 @@ STAIR
 
   <p>В магазине компьютерной техники ночью произошла кража.</p>
   <p>До этого все клавиатуры, которые продавались в магазине, были пронумерованы по очереди, начиная с некоторого натурального числа x. Например, если x=4 и в магазине продавалось 3 клавиатуры, то они имели номера 4, 5 и 6, а если x=10 и в магазине продавалось 7 клавиатур, то они имели номера 10, 11, 12, 13, 14, 15 и 16.</p>
-  <p>После кражи в магазине осталось n клавиатур с номерами a1,a2,…,an. Определите минимальное количество клавиатур, которые могли быть украдены, если никто из сотрудников магазина не помнит значение x.</p>
+  <p>После кражи в магазине осталось n клавиатур с номерами a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub>. Определите минимальное количество клавиатур, которые могли быть украдены, если никто из сотрудников магазина не помнит значение x.</p>
 
   <h4>Входные данные</h4>
   <p>Первая строка содержит одно целое число n (1≤n≤1000) — количество оставшихся в магазине клавиатур.</p>
-  <p>Вторая строка содержит n различных целых чисел a1,a2,…,an
-   (1≤ai≤109) — номера клавиатур, оставшихся в магазине после кражи. Все значения ai заданы в произвольном порядке и попарно различны.</p>
+  <p>Вторая строка содержит n различных целых чисел a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub> (1≤a<sub>i</sub>≤10<sup>9</sup>) — номера клавиатур, оставшихся в магазине после кражи. Все значения a<sub>i</sub> заданы в произвольном порядке и попарно различны.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите минимальное количество клавиатур, которые могли быть украдены, если никто из сотрудников магазина не помнит значение x.</p>
@@ -274,6 +306,42 @@ STAIR
 </pre>
   <code>0</code>
   <p>Во втором примере, если x=4, то ни одна клавиатура не была украдена из магазина.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  int min;
+  cin >> min;
+  int max = min;
+
+  for (int i = 1; i &lt; n; i++) {
+    int temp;
+    cin >> temp;
+
+  // решение
+    if (min > temp) {
+      min = temp;
+    }
+    if (temp > max) {
+      max = temp;
+    }
+  }
+  int result = max - min + 1 - n;
+
+  // вывод результата
+  cout &lt;&lt; result;
+}
+</pre>
+  </details>
 </article>
 
 
