--- a/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
@@ -553,7 +553,7 @@ using namespace std;
 int main() {
   int n;
   cin >> n;
-  vector<int> A(n);
+  vector&lt;int&gt; A(n);
   for (int i = 0; i &lt; n; i++) {
     cin >> A[i];
   }
